[project]
name = "evaluating-trajectories"
version = "0.1.0"
description = "Code for the evaluating trajectories paper"
authors = [
  { name = "Tobias Kietreiber", email = "tobias.kietreiber@fhstp.ac.at" },
  { name = "Alessio Molinari", email = "alessio.molinari@strg.at" }
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
  "duckdb >=1.0.0,<2.0.0",
  "numpy >=2.0.1,<3.0.0",
  "numba >=0.60.0,<1.0.0",
  "gymnasium >=0.29.1,<1.0.0",
  "igraph >=0.11.6,<1.0.0",
  "tqdm >=4.66.5,<5.0.0",
  "umap-learn >=0.5.6,<1.0.0",
  "pandas >=2.2.2,<3.0.0",
  "plotly >=5.23.0,<6.0.0",
  "cffi >=1.17.0,<2.0.0",
  "setuptools >=72.2.0,<73.0.0",
  "stable-baselines3 >=2.3.2,<3.0.0",
  "tensorboard >=2.17.1,<3.0.0",
  "rich >=13.8.0,<14.0.0",
  "pot >=0.9.4,<1.0.0",
  "sb3-contrib >=2.3.0,<3.0.0",
  "python-dotenv >=1.0.1,<2.0.0",
  "torch ==2.6.0; extra != 'cpu'",
  "transformers (>=4.51.3,<5.0.0)",
]

[project.optional-dependencies]
cpu = [
  "torch (==2.6.0+cpu)"
]

[tool.poetry.dependencies]
torch = [
    { markers = "extra == 'cpu'", source = "pytorch-cpu-src"},
    { markers = "extra != 'cpu'"}
 ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.textgen]
optional = true

[tool.poetry.group.textgen.dependencies]
llama-cpp-python = "^0.3.7"

[tool.poetry.group.tinygrad]
optional = true

[tool.poetry.group.tinygrad.dependencies]
tinygrad = {git = "https://github.com/tinygrad/tinygrad.git"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ipython = "^9.1.0"

[tool.poetry.group.lsp-dev]
optional = true

[tool.poetry.group.lsp-dev.dependencies]
black = "^24.4.2"
basedpyright = "^1.24.0"

[[tool.poetry.source]]
name = "pytorch-cpu-src"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-cuda-src"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[tool.ruff]
ignore = ["E501"]
line-length = 120

[tool.basedpyright]
reportMissingTypeStubs = false
typeCheckingMode = "standard"

[tool.black]
line-length = 120
